--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,73 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+div{
+  display: grid;
+  grid-template-columns: repeat(1fr, 4);
+  grid-template-areas:
+  "h h h h "
+  "s m m m "
+  "f f f f";
+}
+.header{
+  grid-area: h;
+}
+.sidebar{
+  grid-area: s;
+  display: flex;
+  justify-content: center;
+}
+.main{
+  grid-area: m;
+  display: flex;
+  justify-content: center;
+}
+.footer{
+  grid-area: f;
+  display: flex;
+  justify-content: center;
+}
+.menu{
+  display: flex;
+  justify-content: center;
+}
+/* Do not change the CSS below. */
+
+.header {
+  background: #4242ea;
+}
+
+.logo img {
+  height: 50px;
+  margin: 15px 0 0 15px;
+  width: auto;
+}
+
+.menu ul {
+  padding: 0;
+}
+
+.menu ul li {
+  display: inline-block;
+  padding: 15px;
+}
+
+.menu a {
+  color: white;
+  text-decoration: none;
+}
+
+.sidebar {
+  background: #2d2d2d;
+  color: white;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.main {
+  background: #ececec;
+  height: 750px;
+  text-align: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+.footer {
+  background: yellow;
+  padding: 10px;
+  text-align: center;
 }
