--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+body {
+  font-family: sans-serif;
+  margin: 0;
+}
+
+html,
+body,
+#root {
+  height: 100%;
+  width: 100%;
+}
+
 div{
   display: grid;
   grid-template-columns: repeat(1fr, 4);
